@@ -154,6 +154,14 @@ The following libraries ARE required WHEN :
 
     libxml2 is distributed under MIT License.
 
+4) JSON runtime support is used
+
+    BOTH runtime AND development components required.
+
+    cJSON >= 1.3.0 - https://github.com/DaveGamble/cJSON
+
+    cJSON is distributed under MIT License.
+
 ============
 
 ============
